--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -114,7 +114,9 @@ message.audio.compress.welcome=Send me an audio to compress. Only the last sent 
 message.audio.bass.boost.welcome=Send me an audio to bass boost. Only the last sent file will be handled
 message.audio.compress.file.not.found=At first send me an audio to compress
 message.audio.bass.boost.file.not.found=At first send me an audio to bass boost
-message.audio.choose.bass.boost=Choose bass boost on the keyboard
+message.audio.choose.bass.boost=Choose bass boost on the keyboard\n\n\
+\ud83d\udca1<i>Choose positive value for adding bass</i>\n\
+\ud83d\udca1<i>Choose negative value for removing bass</i>
 message.audio.compression.choose.bitrate=Choose a <b>bitrate</b> on the keyboard and click <b>Compress</b>
 message.audio.compression.bitrate.out.of.range=Please choose a value greater then 0
 compress.audio.command.description=compress audio
