--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -98,7 +98,9 @@ message.audio.compress.welcome=Siqish uchun menga audio yuboring. Faqat oxirgi y
 message.audio.bass.boost.welcome=Send me audio for adding bass. Only the last audio sent will be processed
 message.audio.compress.file.not.found=Avval siqishni uchun audio yuboring
 message.audio.bass.boost.file.not.found=Avval bass qo'shish uchun audio yuboring
-message.audio.choose.bass.boost=Klaviaturada bass darajasini tanlang
+message.audio.choose.bass.boost=Klaviaturada bass darajasini tanlang\n\n\
+\ud83d\udca1<i>Bass qo'shish uchun ijobiy qiymatni tanlang</i>\n\
+\ud83d\udca1<i>Bassni olib tashlash uchun salbiy qiymatni tanlang</i>
 message.audio.compression.choose.bitrate=Klaviaturadan <b>bitrate</b> ni tanlang va <b>Siqish</b> tugmasini bosing
 message.audio.compression.bitrate.out.of.range=0 dan katta qiymatni tanlang
 compress.audio.command.description=ovozni siqish
