Фикс тегов для ру и уз локализаций

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -116,7 +116,7 @@ message.video.edit.settings=Настройки редактирования ви
 Crf(Качество): <b>{1}</b>\n\
 Аудио кодек: <b>{2}</b>\n\
 Аудио битрейт: <b>{3}</b>\n\
-Аудио channel layout: <b>{4}
+Аудио channel layout: <b>{4}</b>
 message.video.edit.choose.settings=Выберите желаемые настройки на клавиатуре и нажмите на <b>Редактировать видео</b>
 edit.video.command.description=Редактировать видео
 message.choose.video.resolution=Выберите разрешение на клавиатуре
