--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -117,7 +117,7 @@ Qaror: <b>{0}</b>\n\
 Crf(Sifat): <b>{1}</b>\n\
 Audio codec: <b>{2}</b>\n\
 Audio bitrate: <b>{3}</b>\n\
-Audio channel layout: <b>{4}
+Audio channel layout: <b>{4}</b>
 message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
 edit.video.command.description=Videoni tahrirlash
 message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
