Конвертация video note в mp4

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -10,7 +10,7 @@ message.file.format=Формат: <b>{0}</b>
 message.file.size=Размер: <b>{0}</b>
 message.files.count=Файлов: <b>{0}</b>
 downloading.files.step=Скачано {0} файлов из {1}
-message.choose.another.format=Выберите другой формат
+message.choose.another.format=Выберите другой формат на клавиатуре. Ваш файл уже имеет <b>{0}</b> формат
 message.choose.target.extension.default.conversion=Отлично я могу сконвертировать это! Выберите тип на клавиатуре для конвертации. Продолжайте присылать файлы, если вы хотите объединить в 1 формат. \
 Например картинки в pdf или объединить pdf файлы.
 message.choose.target.extension.video.audio.conversion=Отлично я могу сконвертировать это! Выберите тип на клавиатуре для конвертации.
