--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -10,7 +10,7 @@ message.file.format=Format: <b>{0}</b>
 message.file.size=Hajmi: <b>{0}</b>
 message.files.count=Fayllar soni: <b>{0}</b>
 downloading.files.step={0} fayllar {1} dan yuklab olindi
-message.choose.another.format=Boshqa formatni tanlang
+message.choose.another.format=Klaviaturada boshqa formatni tanlang. Faylingiz allaqachon <b>{0}</b> formatida
 message.choose.target.extension.default.conversion=Men buni o'zgartira olaman! Konvertatsiya qilish uchun klaviaturangizdagi turini tanlang. Agar siz 1 formatga birlashtirmoqchi bo'lsangiz, fayllarni yuborishni davom eting. \
 Masalan, PDF-dagi rasmlar yoki PDF-fayllarni birlashtirish.
 message.choose.target.extension.video.audio.conversion=Men buni o'zgartira olaman! Konvertatsiya qilish uchun klaviaturangizdagi turini tanlang.
