--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,7 +21,7 @@ Global queue position: <b>{0}</b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Size: <b>{0}</b>
 message.files.count=Files: <b>{0}</b>
-message.choose.another.format=Choose another format
+message.choose.another.format=Choose another format on the keyboard. Your file already has <b>{0}</b> format
 message.choose.target.extension.default.conversion=Great! I can convert it. Choose type for converting on the keyboard. Keep sending files if you want to combine them into 1 format. \
 For example images to pdf or merge pdf files.
 message.choose.target.extension.video.audio.conversion=Great! I can convert it. Choose type for converting on the keyboard.
