Прогресс бар при конвертации через ffmpeg

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -339,3 +339,5 @@ start.point.command.name=From start
 end.point.command.name=To end
 vscreenshot.command.description=take video screenshot
 vsample.command.description=create video sample
+message.eta=ETA:
+message.speed=Speed:
