--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -338,3 +338,5 @@ amark.command.description=добавить водяной знак к аудио
 bass.boost.command.description=добавить басы к аудио
 vscreenshot.command.description=сделать скриншот видео
 vsample.command.description=создать образец видео
+message.eta=До завершения:
+message.speed=Скорость:
