--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -339,3 +339,5 @@ amark.command.description=audioga suv belgisini qo'shing
 bass.boost.command.description=audioga bass qo'shish
 vscreenshot.command.description=videoning skrinshotini oling
 vsample.command.description=namuna video yaratish
+message.eta=ETA:
+message.speed=Tezlik:
