Лимиты для триальных пользователей

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -341,3 +341,6 @@ vscreenshot.command.description=take video screenshot
 vsample.command.description=create video sample
 message.eta=ETA:
 message.speed=Speed:
+message.trial.user.zero.size.limit=I can't detect your file size. With trial subscription you can't convert files with unknown size
+message.trial.user.size.limit=With trial subscription you can convert files only up to 100MB. Your file size <b>{0}</b>
+message.trial.user.count.limit=With trial subscription you can only 5 conversions a day. You have already completed 5 conversions today
