--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -340,3 +340,6 @@ vscreenshot.command.description=сделать скриншот видео
 vsample.command.description=создать образец видео
 message.eta=До завершения:
 message.speed=Скорость:
+message.trial.user.zero.size.limit=Я не могу определить размер вашего файла. С пробной подпиской вы не можете конвертировать файлы с неизвестным размером
+message.trial.user.size.limit=С пробной подпиской вы можете конвертировать только файлы до 100MB. Размер вашего файла <b>{0}</b>
+message.trial.user.count.limit=С пробной подпиской вы можете выполнить только 5 конвертаций в день. Вы сегодня уже выполнили 5 конвертаций сегодня
