--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -341,3 +341,6 @@ vscreenshot.command.description=videoning skrinshotini oling
 vsample.command.description=namuna video yaratish
 message.eta=ETA:
 message.speed=Tezlik:
+message.trial.user.zero.size.limit=Men sizning faylingiz hajmini aniqlay olmayapman. Sinov obunasi bilan siz noma'lum fayllarni o'zgartira olmaysiz
+message.trial.user.size.limit=Sinov obunasi bilan siz faqat 100MB hajmdagi fayllarni o''zgartirishingiz mumkin. Fayl hajmi <b>{0}</b>
+message.trial.user.count.limit=Sinov obunasi bilan siz kuniga atigi 5 marta konvertatsiya qilishingiz mumkin. Siz bugun 5 ta konversiyani yakunladingiz
