Правильная работа с гифами

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -326,7 +326,7 @@ message.random=Random
 message.vscreenshot.result=Скриншот в <b>{0}</b>
 start.point.command.name=С начала
 end.point.command.name=До конца
-message.video.2.gif.max.length=Я не могу создать gif из видео длительностью более 300 секунд
+message.video.2.gif.max.length=Я не могу создать gif из видео длительностью более 300 секунд. Вы можете обрезать его командой /vcut
 message.video.watermark.max.length=Я не могу добавить водяной знак дольше 300 секунд
 sticker.watermark.command.name=Стикер
 gif.watermark.command.name=Gif
