--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -333,7 +333,7 @@ message.random=Random
 message.vscreenshot.result=<b>{0}</b> da skrinshot
 start.point.command.name=Boshidan
 end.point.command.name=Yakun
-message.video.2.gif.max.length=Men 300 soniyadan ortiq videolardan gif yarata olmayman
+message.video.2.gif.max.length=Men 300 soniyadan ortiq videolardan gif yarata olmayman. Siz uni /vcut buyrug'i bilan kesishingiz mumkin
 message.video.watermark.max.length=Men suv belgisini 300 soniyadan ko'proq qo'sha olmayman
 amark.command.description=audioga suv belgisini qo'shing
 bass.boost.command.description=audioga bass qo'shish
