--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -322,7 +322,7 @@ message.unsupported.media.source=<b>Links to YouTube, TikTok, Instagram are not 
 message.copyright=<i>This material may be protected by copyright. <a href="https://telegra.ph/Copyright-Claims-07-20">More details</a>. \
 If this material infringes your rights, please report</i>: gadjievsaid.1995@gmail.com
 message.too.big.remote.video=I can''t download videos larger than <b>{0}</b>
-message.video.2.gif.max.length=I can't create gif from video longer than 300 seconds
+message.video.2.gif.max.length=I can't create gif from video longer than 300 seconds. You can cut it with /vcut command
 message.video.watermark.max.length=I can't add watermark longer than 300 seconds
 message.vsample.welcome=Send me a video or direct link to a video to create a sample video
 message.vsample.awaiting.start.point=-Send me start time to create sample in <b>hh:mm:ss</b> format. \
