Правильная работа с битрейтом

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -129,7 +129,7 @@ message.video.edit.welcome=Send me a video or direct link to a video to edit. On
 Click <b>PROBE</b> on the keyboard to get current video information.
 message.video.edit.settings=Video edit settings\n\n\
 Resolution: <b>{0}</b>\n\
-Crf(Quality): <b>{1}</b>\n\
+Quality: <b>{1}</b>\n\
 Audio codec: <b>{2}</b>\n\
 Audio bitrate: <b>{3}</b>\n\
 Audio channel layout: <b>{4}</b>
@@ -301,7 +301,7 @@ message.replace.audio.mode=Replace audio
 message.replace.subtitles.mode=Replace subtitles
 vavmerge.start.command.name=Start
 vedit.resolution.command.name=Resolution
-vedit.crf.command.name=Crf(Quality)
+vedit.crf.command.name=Quality
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Audio channel layout
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -342,5 +342,5 @@ vsample.command.description=create video sample
 message.eta=ETA:
 message.speed=Speed:
 message.trial.user.zero.size.limit=I can't detect your file size. With trial subscription you can't convert files with unknown size
-message.trial.user.size.limit=With trial subscription you can convert files only up to 100MB. Your file size <b>{0}</b>
-message.trial.user.count.limit=With trial subscription you can only 5 conversions a day. You have already completed 5 conversions today
+message.trial.user.size.limit=With trial subscription you can convert files only up to <b>{0}</b>. Your file size <b>{1}</b>
+message.trial.user.count.limit=With trial subscription you can only <b>{0}</b> conversions a day. You have already completed <b>{0}</b> conversions today
