--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -114,7 +114,7 @@ message.video.edit.welcome=Menga tahrirlash uchun video yoki to'g'ridan-to'g'ri 
 Video haqida ma'lumot olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
 message.video.edit.settings=Videoni tahrirlash sozlamalari\n\n\
 Qaror: <b>{0}</b>\n\
-Crf(Sifat): <b>{1}</b>\n\
+Sifat: <b>{1}</b>\n\
 Audio codec: <b>{2}</b>\n\
 Audio bitrate: <b>{3}</b>\n\
 Audio channel layout: <b>{4}</b>
@@ -298,7 +298,7 @@ message.replace.subtitles.mode=Subtitrlar almashtiring
 vavmerge.start.command.name=Boshlamoq
 message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
 vedit.resolution.command.name=O'lchamlari
-vedit.crf.command.name=Crf(Sifati)
+vedit.crf.command.name=Sifati
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Audio channel layout
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -342,5 +342,5 @@ vsample.command.description=namuna video yaratish
 message.eta=ETA:
 message.speed=Tezlik:
 message.trial.user.zero.size.limit=Men sizning faylingiz hajmini aniqlay olmayapman. Sinov obunasi bilan siz noma'lum fayllarni o'zgartira olmaysiz
-message.trial.user.size.limit=Sinov obunasi bilan siz faqat 100MB hajmdagi fayllarni o''zgartirishingiz mumkin. Fayl hajmi <b>{0}</b>
-message.trial.user.count.limit=Sinov obunasi bilan siz kuniga atigi 5 marta konvertatsiya qilishingiz mumkin. Siz bugun 5 ta konversiyani yakunladingiz
+message.trial.user.size.limit=Sinov obunasi bilan siz faqat <b>{0}</b> hajmdagi fayllarni o''zgartirishingiz mumkin. Fayl hajmi <b>{1}</b>
+message.trial.user.count.limit=Sinov obunasi bilan siz kuniga atigi <b>{0}</b> marta konvertatsiya qilishingiz mumkin. Siz bugun <b>{0}</b> ta konversiyani yakunladingiz
