Доработал работу со сжатием

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -108,19 +108,27 @@ message.audio.compress.prompt.opus.cancel=\ud83d\udca1<i>Opus - bu eng siqilgan 
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>Bitrate qancha past bo'lsa, chiqadigan fayl hajmi shuncha kichik va sifati past bo'ladi.</i>
 message.audio.compress.opus.estimated.size=Siqilgandan keyingi o''lcham: <b>{0}</b>
 message.audio.compress.original.size=Siqishdan oldin o''lcham: <b>{0}</b>
+message.video.compression.caption=Video sukut bo'yicha 30% siqiladi. Agar siz boshqa siqish nisbati bilan videoni siqishingiz kerak bo'lsa, /vedit buyrug'idan foydalaning
 message.compressed.size=Asl hajmi: <b>{0}</b>\n\
 Siqilgandan keyingi o''lcham: <b>{1}</b>
-message.video.edit.welcome=Menga tahrirlash uchun video yoki to'g'ridan-to'g'ri video havolasini yuboring. Faqat yaqinda yuklangan videoga o'zgartirish kiritiladi. \
-Video haqida ma'lumot olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
-message.video.edit.settings=Videoni tahrirlash sozlamalari\n\n\
-Qaror: <b>{0}</b>\n\
-Sifat: <b>{1}</b>\n\
-Audio codec: <b>{2}</b>\n\
-Audio bitrate: <b>{3}</b>\n\
-Audio channel layout: <b>{4}</b>
+message.video.edit.welcome=Menga <b>Siqish</b>, <b>piksellar sonini o'zgartirish</b> va boshqalar uchun video \
+yoki to'g'ridan -to'g'ri video havolasini yuboring\n\n\
+Faqat yaqinda yuklangan videoga o'zgartirish kiritiladi. Video haqida ma'lumot \
+olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
+message.video.edit.settings=Sizning faylingiz:\n\
+Format: <b>{0}</b>\n\
+Hajmi: <b>{1}</b>\n\n\
+Videoni tahrirlash sozlamalari\n\
+Qaror: <b>{2}</b>\n\
+Sifat: <b>{3}</b>\n\
+Audio codec: <b>{4}</b>\n\
+Audio bitrate: <b>{5}</b>\n\
+Audio channel layout: <b>{6}</b>\n\n\
+Natija:\n\
+Hisoblangan o''lcham: <b>{7}</b>
 message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
-edit.video.command.description=Videoni tahrirlash
-message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
+edit.video.command.description=\ud83d\udd25Videoni tahrirlash
+message.choose.video.edit.settings=Klaviaturada video tahrirlash sozlamalarini tanlang
 message.send.video.to.edit=Avval tahrirlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring
 message.video.will.be.edited=Video o''zgartiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
@@ -128,8 +136,8 @@ video.editing.step=tahrirlash
 video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
 Natijada echim: <b>{1}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
-message.video.crf.warn=\ud83d\udca1<i>Qiymat qancha yuqori bo'lsa, chiqadigan fayl hajmi shuncha yuqori bo'ladi va sifati past \
-bo'ladi va videoni qayta ishlash tezligi oshadi.</i>
+message.video.crf.warn=\ud83d\udca1<i>Videoni siqish uchun <b>Siqish</b> tugmasi yordamida siqishni tezligini tanlang. Siz shuni bilishingiz kerakki, \
+video o'lchamlari, siqishni tezligini tanlamasdan, sizning videongizni siqmaydi</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Siqish formati: <b>{0}</b>
 message.compress.audio.format.updated=Siqish formati yangilandi
@@ -298,7 +306,7 @@ message.replace.subtitles.mode=Subtitrlar almashtiring
 vavmerge.start.command.name=Boshlamoq
 message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
 vedit.resolution.command.name=O'lchamlari
-vedit.crf.command.name=Sifati
+vedit.quality.command.name=\ud83e\udd77Siqish
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Audio channel layout
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -308,6 +316,7 @@ message.choose.video.audio.bitrate=Klaviaturada audio bit tezligini tanlang
 message.choose.video.audio.mono.stereo=Klaviaturada "channel layout" -ni tanlang
 message.auto=Avtomatik
 message.dont.change=O'zgartirmang
+message.dont.compress=Siqmang
 message.choose.edit.settings=Birinchidan, klaviaturada kerakli sozlamalarni tanlang
 message.video.edit.result.size=Asl hajmi: <b>{0}</b>\n\
 Natija hajmi: <b>{1}</b>
@@ -344,3 +353,4 @@ message.speed=Tezlik:
 message.trial.user.zero.size.limit=Men sizning faylingiz hajmini aniqlay olmayapman. Sinov obunasi bilan siz noma'lum fayllarni o'zgartira olmaysiz
 message.trial.user.size.limit=Sinov obunasi bilan siz faqat <b>{0}</b> hajmdagi fayllarni o''zgartirishingiz mumkin. Fayl hajmi <b>{1}</b>
 message.trial.user.count.limit=Sinov obunasi bilan siz kuniga atigi <b>{0}</b> marta konvertatsiya qilishingiz mumkin. Siz bugun <b>{0}</b> ta konversiyani yakunladingiz
+by.percentage.command.name={0}% ga
