--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -123,28 +123,34 @@ compress.audio.command.description=compress audio
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>The lower the bitrate, the smaller the output file size will be and the lower quality will be.</i>
 message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
+message.video.compression.caption=Video compressed by 30% as default. If you need custom <b>compression rate<b> use /vedit command
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
-message.video.edit.welcome=Send me a video or direct link to a video to edit. Only the last sent video will be edited. \
-Click <b>PROBE</b> on the keyboard to get current video information.
-message.video.edit.settings=Video edit settings\n\n\
-Resolution: <b>{0}</b>\n\
-Quality: <b>{1}</b>\n\
-Audio codec: <b>{2}</b>\n\
-Audio bitrate: <b>{3}</b>\n\
-Audio channel layout: <b>{4}</b>
+message.video.edit.welcome=Send me a video or direct link to a video to <b>compress</b>, <b>change resolution</b> etc. \n\n\
+Only the last sent video will be edited. Click <b>PROBE</b> on the keyboard to get current video information.
+message.video.edit.settings=Your file:\n\
+Format: <b>{0}</b>\n\
+Size: <b>{1}</b>\n\n\
+Video edit settings\n\
+Resolution: <b>{2}</b>\n\
+Compress by: <b>{3}</b>\n\
+Audio codec: <b>{4}</b>\n\
+Audio bitrate: <b>{5}</b>\n\
+Audio channel layout: <b>{6}</b>\n\n\
+Result:\n\
+Estimated size: <b>{7}</b>
 message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
-edit.video.command.description=Edit video
-message.choose.video.resolution=Choose resolution on the keyboard
+edit.video.command.description=\ud83d\udd25Edit video
+message.choose.video.edit.settings=Choose video edit settings on the keyboard
 message.send.video.to.edit=At first send me a video or direct link to a video to edit
 message.video.will.be.edited=Video will be edited\n\
 Global queue position: <b>{0}</b>
 video.editing.step=Editing
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
-message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
-message.video.crf.warn=\ud83d\udca1<i>The bigger the value, the smaller the output file size will be and the lower quality will be \
-and higher encoding speed will be.</i>
+message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality</i>
+message.video.crf.warn=\ud83d\udca1<i>For compression choose a <b>compression rate</b> with <b>Compress</b> button. You should know that decreasing \
+video resolution, without choosing a compression rate, will not compress your video</i>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
 message.compress.audio.output.frequency=Frequency: <b>{0}Hz</b>
 message.compress.audio.bitrate.updated=Bitrate updated
@@ -301,7 +307,7 @@ message.replace.audio.mode=Replace audio
 message.replace.subtitles.mode=Replace subtitles
 vavmerge.start.command.name=Start
 vedit.resolution.command.name=Resolution
-vedit.crf.command.name=Quality
+vedit.quality.command.name=\ud83e\udd77Compress
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Audio channel layout
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -311,6 +317,7 @@ message.choose.video.audio.codec=Choose audio codec on the keyboard
 message.choose.video.audio.bitrate=Choose audio bitrate on the keyboard
 message.choose.video.audio.mono.stereo=Choose audio channel layout on the keyboard
 message.dont.change=Don't change
+message.dont.compress=Don't compress
 message.auto=Auto
 message.choose.edit.settings=At first choose desired settings on the keyboard
 message.video.edit.result.size=Original size: <b>{0}</b>\n\
@@ -344,3 +351,4 @@ message.speed=Speed:
 message.trial.user.zero.size.limit=I can't detect your file size. With trial subscription you can't convert files with unknown size
 message.trial.user.size.limit=With trial subscription you can convert files only up to <b>{0}</b>. Your file size <b>{1}</b>
 message.trial.user.count.limit=With trial subscription you can only <b>{0}</b> conversions a day. You have already completed <b>{0}</b> conversions today
+by.percentage.command.name=by {0}%
