Доработал работу со сжатием

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -128,16 +128,16 @@ message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
 message.video.edit.welcome=Send me a video or direct link to a video to <b>compress</b>, <b>change resolution</b> etc. \n\n\
 Only the last sent video will be edited. Click <b>PROBE</b> on the keyboard to get current video information.
-message.video.edit.settings=Your file:\n\
+message.video.edit.settings=<b>Your file</b>:\n\
 Format: <b>{0}</b>\n\
 Size: <b>{1}</b>\n\n\
-Video edit settings\n\
+<b>Video edit settings</b>:\n\
 Resolution: <b>{2}</b>\n\
 Compress by: <b>{3}</b>\n\
 Audio codec: <b>{4}</b>\n\
 Audio bitrate: <b>{5}</b>\n\
 Audio channel layout: <b>{6}</b>\n\n\
-Result:\n\
+<b>Result</b>:\n\
 Estimated size: <b>{7}</b>
 message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=\ud83d\udd25Edit video
@@ -149,7 +149,7 @@ video.editing.step=Editing
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality</i>
-message.video.crf.warn=\ud83d\udca1<i>For compression choose a <b>compression rate</b> with <b>Compress</b> button. You should know that decreasing \
+message.video.crf.warn=\ud83d\udca1<i>For compression choose a <b>Compression rate</b>. You should know that decreasing \
 video resolution, without choosing a compression rate, will not compress your video</i>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
 message.compress.audio.output.frequency=Frequency: <b>{0}Hz</b>
@@ -306,8 +306,8 @@ message.add.subtitles.mode=Add subtitles
 message.replace.audio.mode=Replace audio
 message.replace.subtitles.mode=Replace subtitles
 vavmerge.start.command.name=Start
-vedit.resolution.command.name=Resolution
-vedit.quality.command.name=\ud83e\udd77Compress
+vedit.resolution.command.name=\ud83e\uddbeResolution
+vedit.quality.command.name=\ud83e\udd77Compression rate
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Audio channel layout
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -352,3 +352,9 @@ message.trial.user.zero.size.limit=I can't detect your file size. With trial sub
 message.trial.user.size.limit=With trial subscription you can convert files only up to <b>{0}</b>. Your file size <b>{1}</b>
 message.trial.user.count.limit=With trial subscription you can only <b>{0}</b> conversions a day. You have already completed <b>{0}</b> conversions today
 by.percentage.command.name=by {0}%
+message.vedit.choose.compression.rate=Chose compression rate in percentage on the keyboard
+message.vedit.choose.resolution=Chose video resolution on the keyboard
+message.vedit.choose.audio.codec=Chose audio codec on the keyboard
+message.vedit.choose.audio.bitrate=Chose audio bitrate on the keyboard
+message.vedit.choose.audio.channel.layout=Chose audio channel layout on the keyboard
+message.estimated.size.after.compression=Estimated size after compression: <b>{0}</b>
