--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -115,16 +115,16 @@ message.video.edit.welcome=Menga <b>Siqish</b>, <b>piksellar sonini o'zgartirish
 yoki to'g'ridan -to'g'ri video havolasini yuboring\n\n\
 Faqat yaqinda yuklangan videoga o'zgartirish kiritiladi. Video haqida ma'lumot \
 olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
-message.video.edit.settings=Sizning faylingiz:\n\
+message.video.edit.settings=<b>Sizning faylingiz</b>:\n\
 Format: <b>{0}</b>\n\
 Hajmi: <b>{1}</b>\n\n\
-Videoni tahrirlash sozlamalari\n\
+<b>Videoni tahrirlash sozlamalari</b>:\n\
 Qaror: <b>{2}</b>\n\
 Sifat: <b>{3}</b>\n\
 Audio codec: <b>{4}</b>\n\
 Audio bitrate: <b>{5}</b>\n\
 Audio channel layout: <b>{6}</b>\n\n\
-Natija:\n\
+<b>Natija</b>:\n\
 Hisoblangan o''lcham: <b>{7}</b>
 message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
 edit.video.command.description=\ud83d\udd25Videoni tahrirlash
@@ -136,7 +136,7 @@ video.editing.step=tahrirlash
 video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
 Natijada echim: <b>{1}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
-message.video.crf.warn=\ud83d\udca1<i>Videoni siqish uchun <b>Siqish</b> tugmasi yordamida siqishni tezligini tanlang. Siz shuni bilishingiz kerakki, \
+message.video.crf.warn=\ud83d\udca1<i>Videoni siqish uchun <b>Siqilish nisbati</b> ni tanlang. Siz shuni bilishingiz kerakki, \
 video o'lchamlari, siqishni tezligini tanlamasdan, sizning videongizni siqmaydi</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Siqish formati: <b>{0}</b>
@@ -305,8 +305,8 @@ message.replace.audio.mode=Audio almashtiring
 message.replace.subtitles.mode=Subtitrlar almashtiring
 vavmerge.start.command.name=Boshlamoq
 message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
-vedit.resolution.command.name=O'lchamlari
-vedit.quality.command.name=\ud83e\udd77Siqish
+vedit.resolution.command.name=\ud83e\uddbeO'lchamlari
+vedit.quality.command.name=\ud83e\udd77Siqilish nisbati
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Audio channel layout
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -354,3 +354,9 @@ message.trial.user.zero.size.limit=Men sizning faylingiz hajmini aniqlay olmayap
 message.trial.user.size.limit=Sinov obunasi bilan siz faqat <b>{0}</b> hajmdagi fayllarni o''zgartirishingiz mumkin. Fayl hajmi <b>{1}</b>
 message.trial.user.count.limit=Sinov obunasi bilan siz kuniga atigi <b>{0}</b> marta konvertatsiya qilishingiz mumkin. Siz bugun <b>{0}</b> ta konversiyani yakunladingiz
 by.percentage.command.name={0}% ga
+message.vedit.choose.compression.rate=Klaviaturadan <b>siqilish tezligi</b> ni tanlang
+message.vedit.choose.resolution=Klaviaturada <b>video ravshanligi</b> ni tanlang
+message.vedit.choose.audio.codec=Klaviaturada <b>audio kodek</b> ni tanlang
+message.vedit.choose.audio.bitrate=Klaviaturada <b>audio bit tezligi</b> ni tanlang
+message.vedit.choose.audio.channel.layout=Klaviaturada <b>audio channel layout</b> ni tanlang
+message.estimated.size.after.compression=Siqishdan keyin taxminiy hajmi: <b>{0}</b>
