Фикс создания sample video

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -360,3 +360,5 @@ message.vedit.choose.audio.codec=Klaviaturada <b>audio kodek</b> ni tanlang
 message.vedit.choose.audio.bitrate=Klaviaturada <b>audio bit tezligi</b> ni tanlang
 message.vedit.choose.audio.channel.layout=Klaviaturada <b>audio channel layout</b> ni tanlang
 message.estimated.size.after.compression=Siqishdan keyin taxminiy hajmi: <b>{0}</b>
+message.invalid.start.point=Siz boshqa boshlanish vaqtini tanlashingiz kerak. \
+Siz <b>{0}</b> ni yuborgansiz, lekin videongiz faqat <b>{1}</b> uzunlikda. Videoni qayta yuboring va boshqa boshlanish vaqtini tanlang
