--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -358,3 +358,5 @@ message.vedit.choose.audio.codec=Chose audio codec on the keyboard
 message.vedit.choose.audio.bitrate=Chose audio bitrate on the keyboard
 message.vedit.choose.audio.channel.layout=Chose audio channel layout on the keyboard
 message.estimated.size.after.compression=Estimated size after compression: <b>{0}</b>
+message.invalid.start.point=You need to choose another start point. \
+You have sent <b>{0}</b> start point, but your video length just <b>{1}</b>. Send your video again and send a new valid start point
