Добавил информацию о размере после сжатия

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -123,7 +123,7 @@ compress.audio.command.description=compress audio
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>The lower the bitrate, the smaller the output file size will be and the lower quality will be.</i>
 message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
-message.video.compression.caption=Video compressed by 30% as default. If you need custom <b>compression rate<b> use /vedit command
+message.video.compression.caption=Video compressed by <b>30% as default</b>. If you need custom <b>compression rate</b> use /vedit command
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
 message.video.edit.welcome=Send me a video or direct link to a video to <b>compress</b>, <b>change resolution</b> etc. \n\n\
@@ -358,5 +358,6 @@ message.vedit.choose.audio.codec=Chose audio codec on the keyboard
 message.vedit.choose.audio.bitrate=Chose audio bitrate on the keyboard
 message.vedit.choose.audio.channel.layout=Chose audio channel layout on the keyboard
 message.estimated.size.after.compression=Estimated size after compression: <b>{0}</b>
+message.compress.by=Compress by: <b>{0}</b>
 message.invalid.start.point=You need to choose another start point. \
 You have sent <b>{0}</b> start point, but your video length just <b>{1}</b>. Send your video again and send a new valid start point
