--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -108,7 +108,7 @@ message.audio.compress.prompt.opus.cancel=\ud83d\udca1<i>Opus - bu eng siqilgan 
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>Bitrate qancha past bo'lsa, chiqadigan fayl hajmi shuncha kichik va sifati past bo'ladi.</i>
 message.audio.compress.opus.estimated.size=Siqilgandan keyingi o''lcham: <b>{0}</b>
 message.audio.compress.original.size=Siqishdan oldin o''lcham: <b>{0}</b>
-message.video.compression.caption=Video sukut bo'yicha 30% siqiladi. Agar siz boshqa siqish nisbati bilan videoni siqishingiz kerak bo'lsa, /vedit buyrug'idan foydalaning
+message.video.compression.caption=Video sukut bo'yicha <b>30%</b> siqiladi. Agar siz boshqa siqish nisbati bilan videoni siqishingiz kerak bo'lsa, /vedit buyrug'idan foydalaning
 message.compressed.size=Asl hajmi: <b>{0}</b>\n\
 Siqilgandan keyingi o''lcham: <b>{1}</b>
 message.video.edit.welcome=Menga <b>Siqish</b>, <b>piksellar sonini o'zgartirish</b> va boshqalar uchun video \
@@ -119,8 +119,8 @@ message.video.edit.settings=<b>Sizning faylingiz</b>:\n\
 Format: <b>{0}</b>\n\
 Hajmi: <b>{1}</b>\n\n\
 <b>Videoni tahrirlash sozlamalari</b>:\n\
-Qaror: <b>{2}</b>\n\
-Sifat: <b>{3}</b>\n\
+Qisqartirish: <b>{2}</b>\n\
+Video o''lchamlari: <b>{3}</b>\n\
 Audio codec: <b>{4}</b>\n\
 Audio bitrate: <b>{5}</b>\n\
 Audio channel layout: <b>{6}</b>\n\n\
@@ -359,6 +359,7 @@ message.vedit.choose.resolution=Klaviaturada <b>video ravshanligi</b> ni tanlang
 message.vedit.choose.audio.codec=Klaviaturada <b>audio kodek</b> ni tanlang
 message.vedit.choose.audio.bitrate=Klaviaturada <b>audio bit tezligi</b> ni tanlang
 message.vedit.choose.audio.channel.layout=Klaviaturada <b>audio channel layout</b> ni tanlang
+message.compress.by=Qisqartirish: <b>{0}</b>
 message.estimated.size.after.compression=Siqishdan keyin taxminiy hajmi: <b>{0}</b>
 message.invalid.start.point=Siz boshqa boshlanish vaqtini tanlashingiz kerak. \
 Siz <b>{0}</b> ni yuborgansiz, lekin videongiz faqat <b>{1}</b> uzunlikda. Videoni qayta yuboring va boshqa boshlanish vaqtini tanlang
