Новые фиксы после отладки

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,8 +93,8 @@ Last run at: <b>{5}</b>\n\
 Completed at: <b>{6}</b>\n\
 File id: <b>{7}</b>\n\
 Result file id: <b>{8}</b>
-message.dont.send.new.request=Don't send a new file, otherwise the current request will be canceled.
-extra.message.dont.send.new.request=Please don't send a new file until your last request is complete, otherwise it will be canceled.
+message.dont.send.new.request=Don't send a new file, otherwise the current request will be canceled
+extra.message.dont.send.new.request=Please don't send a new file until your last request is complete, otherwise it will be canceled
 message.pdf.images.unzip.bot=Here is the archive with all images. I can't send all images directly to avoid telegram flood wait. \
 You can extract it with @SmartUnzipperBot.
 message.concatenate.files.welcome=Send me <b>{0}</b> files and when finished choose <b>Merge</b> on the keyboard. I can''t \
@@ -132,8 +132,8 @@ message.video.edit.settings=<b>Your file</b>:\n\
 Format: <b>{0}</b>\n\
 Size: <b>{1}</b>\n\n\
 <b>Video edit settings</b>:\n\
-Resolution: <b>{2}</b>\n\
 Compress by: <b>{3}</b>\n\
+Resolution: <b>{2}</b>\n\
 Audio codec: <b>{4}</b>\n\
 Audio bitrate: <b>{5}</b>\n\
 Audio channel layout: <b>{6}</b>\n\n\
@@ -361,3 +361,5 @@ message.estimated.size.after.compression=Estimated size after compression: <b>{0
 message.compress.by=Compress by: <b>{0}</b>
 message.invalid.start.point=You need to choose another start point. \
 You have sent <b>{0}</b> start point, but your video length just <b>{1}</b>. Send your video again and send a new valid start point
+message.use.vedit.for.compression=With /vedit command you can compress your video up to <b>{0}</b>. \
+So your video, compressed by <b>{0}</b>, could be <b>{1}</b> in size
