--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -77,8 +77,8 @@ converting.step=Конвертация
 waiting.step=Ожидание обработки
 message.compress.queued=Файл будет сжат\n\
 Место в глобальной очереди: <b>{0}</b>
-message.dont.send.new.request=Не отправляйте новый файл, иначе текущий запрос будет отменен.
-extra.message.dont.send.new.request=Пожалуйста, не отправляйте новый файл, пока ваш последний запрос не будет завершен, иначе он будет отменен.
+message.dont.send.new.request=Не отправляйте новый файл, иначе текущий запрос будет отменен
+extra.message.dont.send.new.request=Пожалуйста, не отправляйте новый файл, пока ваш последний запрос не будет завершен, иначе он будет отменен
 message.pdf.images.unzip.bot=Вот архив со всеми изображениями. Я не могу отправить картинки напрямую, чтобы избежать telegram flood wait. \
 Вы можете извлечь его в @SmartUnzipperBot.
 message.concatenate.files.welcome=Отправьте <b>{0}</b> файлы и когда закончите нажмите <b>Объединить</b> на клавиатуре для объединения. Я не могу \
@@ -117,8 +117,8 @@ message.video.edit.settings=<b>Ваш файл</b>:\n\
 Формат: <b>{0}</b>\n\
 Размер: <b>{1}</b>\n\n\
 <b>Настройки редактирования видео</b>:\n\
+Сжать на: <b>{3}</b>\n\
 Разрешение: <b>{2}</b>\n\
-Качество: <b>{3}</b>\n\
 Аудио кодек: <b>{4}</b>\n\
 Аудио битрейт: <b>{5}</b>\n\
 Аудио channel layout: <b>{6}</b>\n\n\
@@ -362,3 +362,5 @@ message.compress.by=Сжать на: <b>{0}</b>
 message.estimated.size.after.compression=Предполагаемый размер после сжатия: <b>{0}</b>
 message.invalid.start.point=Вам нужно выбрать другое время начала. \
 Вы отправили <b>{0}</b>, но длина вашего видео всего <b>{1}</b>. Отправьте ваше видео повторно и выберите другое правильное время начала
+message.use.vedit.for.compression=С командой /vedit вы можете сжать видео до <b>{0}</b>. \
+Размер вашего видео с <b>{0}</b> сжатием может составлять <b>{1}</b>
