--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -77,8 +77,8 @@ converting.step=Konversiya
 waiting.step=Qayta ishlashni kutish
 message.compress.queued=Ushbu fayl siqiladi\n\
 Global navbatdagi joy: <b>{0}</b>
-message.dont.send.new.request=Yangi faylni yuklamang, aks holda joriy so'rov bekor qilinadi.
-extra.message.dont.send.new.request=Iltimos, oxirgi so'rovingiz tugamaguncha yangi faylni topshirmang yoki u bekor qilinadi.
+message.dont.send.new.request=Yangi faylni yuklamang, aks holda joriy so'rov bekor qilinadi
+extra.message.dont.send.new.request=Iltimos, oxirgi so'rovingiz tugamaguncha yangi faylni topshirmang yoki u bekor qilinadi
 message.pdf.images.unzip.bot=Bu erda barcha rasmlar bilan arxivdan. \
 Oldini olish uchun fotosuratlarni to'g'ridan-to'g'ri yuborolmayman telegram flood wait. \
 Siz uni @SmartUnzipperBot-dan yuklab olishingiz mumkin.
@@ -119,8 +119,8 @@ message.video.edit.settings=<b>Sizning faylingiz</b>:\n\
 Format: <b>{0}</b>\n\
 Hajmi: <b>{1}</b>\n\n\
 <b>Videoni tahrirlash sozlamalari</b>:\n\
-Qisqartirish: <b>{2}</b>\n\
 Video o''lchamlari: <b>{3}</b>\n\
+Qisqartirish: <b>{2}</b>\n\
 Audio codec: <b>{4}</b>\n\
 Audio bitrate: <b>{5}</b>\n\
 Audio channel layout: <b>{6}</b>\n\n\
@@ -363,3 +363,5 @@ message.compress.by=Qisqartirish: <b>{0}</b>
 message.estimated.size.after.compression=Siqishdan keyin taxminiy hajmi: <b>{0}</b>
 message.invalid.start.point=Siz boshqa boshlanish vaqtini tanlashingiz kerak. \
 Siz <b>{0}</b> ni yuborgansiz, lekin videongiz faqat <b>{1}</b> uzunlikda. Videoni qayta yuboring va boshqa boshlanish vaqtini tanlang
+message.use.vedit.for.compression=/vedit buyrug''i bilan siz videoni <b>{0}</b> gacha siqishingiz mumkin. \
+<b>{0}</b> siqilgan video o''lchamingiz <b>{1}</b> bo''lishi mumkin
