Фикс работы с гифами

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -329,7 +329,8 @@ message.unsupported.media.source=<b>Links to YouTube, TikTok, Instagram are not 
 message.copyright=<i>This material may be protected by copyright. <a href="https://telegra.ph/Copyright-Claims-07-20">More details</a>. \
 If this material infringes your rights, please report</i>: gadjievsaid.1995@gmail.com
 message.too.big.remote.video=I can''t download videos larger than <b>{0}</b>
-message.video.2.gif.max.length=I can't create gif from video longer than 300 seconds. You can cut it with /vcut command
+message.video.2.gif.max.length=I can't add the video watermark longer than <b>300 seconds</b>. Your video watermark length <b>{0}</b>. \
+You can cut it with /vcut command
 message.video.watermark.max.length=I can't add watermark longer than 300 seconds
 message.vsample.welcome=Send me a video or direct link to a video to create a sample video
 message.vsample.awaiting.start.point=-Send me start time to create sample in <b>hh:mm:ss</b> format. \
@@ -363,3 +364,5 @@ message.invalid.start.point=You need to choose another start point. \
 You have sent <b>{0}</b> start point, but your video length just <b>{1}</b>. Send your video again and send a new valid start point
 message.use.vedit.for.compression=With /vedit command you can compress your video up to <b>{0}</b>. \
 So your video, compressed by <b>{0}</b>, could be <b>{1}</b> in size
+message.video.2.gif.max.size=Gif can't be created from video bigger than <b>10MB</b>. Your video''s size is <b>{0}</b>. \
+Compress it or cut, with /vedit and /vcut commands, to reduce size and try again
