--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -342,7 +342,8 @@ message.random=Random
 message.vscreenshot.result=<b>{0}</b> da skrinshot
 start.point.command.name=Boshidan
 end.point.command.name=Yakun
-message.video.2.gif.max.length=Men 300 soniyadan ortiq videolardan gif yarata olmayman. Siz uni /vcut buyrug'i bilan kesishingiz mumkin
+message.video.2.gif.max.length=Men suv belgisini <b>300 soniyadan</b> ko''proq qo''sha olmayman. <b>{0}</b> suv belgisi uchun videoning uzunligi. \
+Siz uni /vcut buyrug''i bilan kesishingiz mumkin
 message.video.watermark.max.length=Men suv belgisini 300 soniyadan ko'proq qo'sha olmayman
 amark.command.description=audioga suv belgisini qo'shing
 bass.boost.command.description=audioga bass qo'shish
@@ -365,3 +366,5 @@ message.invalid.start.point=Siz boshqa boshlanish vaqtini tanlashingiz kerak. \
 Siz <b>{0}</b> ni yuborgansiz, lekin videongiz faqat <b>{1}</b> uzunlikda. Videoni qayta yuboring va boshqa boshlanish vaqtini tanlang
 message.use.vedit.for.compression=/vedit buyrug''i bilan siz videoni <b>{0}</b> gacha siqishingiz mumkin. \
 <b>{0}</b> siqilgan video o''lchamingiz <b>{1}</b> bo''lishi mumkin
+message.video.2.gif.max.size=b>10MB</b> dan katta videolardan GIF yaratish mumkin emas. Videongiz hajmi <b>{0}</b>. \
+O''lchamini kamaytirish uchun /vedit va /vcut buyruqlari bilan uni qisqartiring yoki kesib oling va qaytadan urinib ko''ring
