--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -335,7 +335,8 @@ message.random=Random
 message.vscreenshot.result=Скриншот в <b>{0}</b>
 start.point.command.name=С начала
 end.point.command.name=До конца
-message.video.2.gif.max.length=Я не могу создать gif из видео длительностью более 300 секунд. Вы можете обрезать его командой /vcut
+message.video.2.gif.max.length=Я не могу добавить водяной знак длительностью более 300 секунд. Длительность вашего видео для водяного знака <b>{0}</b>. \
+Вы можете обрезать его командой /vcut
 message.video.watermark.max.length=Я не могу добавить водяной знак дольше 300 секунд
 sticker.watermark.command.name=Стикер
 gif.watermark.command.name=Gif
@@ -364,3 +365,5 @@ message.invalid.start.point=Вам нужно выбрать другое вре
 Вы отправили <b>{0}</b>, но длина вашего видео всего <b>{1}</b>. Отправьте ваше видео повторно и выберите другое правильное время начала
 message.use.vedit.for.compression=С командой /vedit вы можете сжать видео до <b>{0}</b>. \
 Размер вашего видео с <b>{0}</b> сжатием может составлять <b>{1}</b>
+message.video.2.gif.max.size=GIF нельзя создать из видео размером более <b>10МБ</b>. Размер вашего видео <b>{0}</b>. \
+Сожмите или обрежьте его с помощью команд /vedit и /vcut, чтобы уменьшить размер, и попробуйте еще раз
