--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -130,15 +130,16 @@ message.video.edit.welcome=Send me a video or direct link to a video to <b>compr
 Only the last sent video will be edited. Click <b>PROBE</b> on the keyboard to get current video information.
 message.video.edit.settings=<b>Your file</b>:\n\
 Format: <b>{0}</b>\n\
-Size: <b>{1}</b>\n\n\
+Size: <b>{1}</b>\n\
+Resolution: <b>{2}</b>\n\n\
 <b>Video edit settings</b>:\n\
 Compress by: <b>{3}</b>\n\
-Resolution: <b>{2}</b>\n\
-Audio codec: <b>{4}</b>\n\
-Audio bitrate: <b>{5}</b>\n\
-Audio channel layout: <b>{6}</b>\n\n\
+Resolution: <b>{4}</b>\n\
+Audio codec: <b>{5}</b>\n\
+Audio bitrate: <b>{6}</b>\n\
+Audio channel layout: <b>{7}</b>\n\n\
 <b>Result</b>:\n\
-Estimated size: <b>{7}</b>
+Estimated size: <b>{8}</b>
 message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=\ud83d\udd25Edit video
 message.choose.video.edit.settings=Choose video edit settings on the keyboard
@@ -312,7 +313,7 @@ vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Audio channel layout
 vedit.audio.bitrate.command.name=Audio bitrate
 message.selected=Selected
-message.choose.video.crf=Choose crf on the keyboard
+message.choose.video.crf=Choose compression rate on the keyboard
 message.choose.video.audio.codec=Choose audio codec on the keyboard
 message.choose.video.audio.bitrate=Choose audio bitrate on the keyboard
 message.choose.video.audio.mono.stereo=Choose audio channel layout on the keyboard
